Fixed white bar at the bottom on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -39,7 +39,6 @@ h3{
   min-height: 100vh;
   margin: auto;
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 #header {
@@ -412,3 +411,9 @@ img {
     display: none;
   }
 }
+
+@media only screen and (max-device-width: 480px) {
+    html {
+      height: calc(100% + 60px);
+      min-height: calc(100% + 60px);
+    }
